Story and Create post

--- a/index.html
+++ b/index.html
@@ -155,7 +155,45 @@
         <!--============END OF LEFT============ -->
 
         <!--============MIDDLE============ -->
-        <div class="middle"></div>
+        <div class="middle">
+          <!--============STORIES============ -->
+          <div class="stories">
+            <div class="story">
+              <img src="images/profile-1.jpg" class="profile-pic" />
+              <p>Youssef</p>
+            </div>
+            <div class="story">
+              <img src="images/profile-1.jpg" class="profile-pic" />
+              <p>Youssef</p>
+            </div>
+            <div class="story">
+              <img src="images/profile-1.jpg" class="profile-pic" />
+              <p>Youssef</p>
+            </div>
+            <div class="story">
+              <img src="images/profile-1.jpg" class="profile-pic" />
+              <p>Youssef</p>
+            </div>
+            <div class="story">
+              <img src="images/profile-1.jpg" class="profile-pic" />
+              <p>Youssef</p>
+            </div>
+            <div class="story">
+              <img src="images/profile-1.jpg" class="profile-pic" />
+              <p>Youssef</p>
+            </div>
+          </div>
+          <!--============END OF STORIES============ -->
+          <form class="create-post">
+            <img src="images/profile-1.jpg" class="profile-pic" />
+            <input
+              type="text"
+              id="create-post"
+              placeholder="What's on your mind, Youssef?"
+            />
+            <input type="submit" value="Post" class="btn btn-primary" />
+          </form>
+        </div>
 
         <!-- ============RIGHT============ -->
       </div>
