--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
               <a href="" class="text-muted"><p>@Youssef</p></a>
             </div>
           </div>
+          <!-- ============SIDEBAR============ -->
           <div class="sidebar">
             <a href="" class="menu-item active">
               <i class="uli uil-home"></i>
@@ -159,27 +160,27 @@
           <!--============STORIES============ -->
           <div class="stories">
             <div class="story">
-              <img src="images/profile-1.jpg" class="profile-pic" />
+              <img src="images/profile-8.jpg" class="profile-pic" />
               <p>Youssef</p>
             </div>
             <div class="story">
-              <img src="images/profile-1.jpg" class="profile-pic" />
+              <img src="images/profile-9.jpg" class="profile-pic" />
               <p>Youssef</p>
             </div>
             <div class="story">
-              <img src="images/profile-1.jpg" class="profile-pic" />
+              <img src="images/profile-10.jpg" class="profile-pic" />
               <p>Youssef</p>
             </div>
             <div class="story">
-              <img src="images/profile-1.jpg" class="profile-pic" />
+              <img src="images/profile-11.jpg" class="profile-pic" />
               <p>Youssef</p>
             </div>
             <div class="story">
-              <img src="images/profile-1.jpg" class="profile-pic" />
+              <img src="images/profile-12.jpg" class="profile-pic" />
               <p>Youssef</p>
             </div>
             <div class="story">
-              <img src="images/profile-1.jpg" class="profile-pic" />
+              <img src="images/profile-13.jpg" class="profile-pic" />
               <p>Youssef</p>
             </div>
           </div>
@@ -193,9 +194,348 @@
             />
             <input type="submit" value="Post" class="btn btn-primary" />
           </form>
+          <!--============FEEDS============ -->
+          <div class="feeds">
+            <div class="feed">
+				<div class="head">
+				  <div class="profile">
+					<a href=""
+					  ><img src="images/profile-1.jpg" class="profile-pic"
+					/></a>
+					<div class="handle">
+					  <a href=""><h4>Youssef Bassiem</h4></a>
+					  <a href="" class="text-muted"><p>@Youssef</p></a>
+					</div>
+				  </div>
+				  <i class="uli uil-ellipsis-h"></i>
+				</div>
+				<div class="pic-feed">
+				  <img src="images/feed-1.jpg" />
+				  <div class="buttons">
+					<div class="action-buttons">
+					  <i class="uli uil-heart"></i>
+					  <i class="uli uil-comment-dots"></i>
+					  <i class="uli uil-share-alt"></i>
+					</div>
+					<i class="uli uil-bookmark"></i>
+				  </div>
+				</div>
+				<div class="liked-by">
+				  <span>
+					<img src="images/profile-14.jpg" />
+				  </span>
+				  <span>
+					<img src="images/profile-15.jpg"/>
+				  </span>
+				  <span
+					><img src="images/profile-16.jpg" 
+				  /></span>
+				  <p>
+					<span>Liked by </span><b>Youssef Bassiem </b><span> and </span
+					><b>203 others</b>
+				  </p>
+				</div>
+				<div class="caption">
+					<p>
+					  <b>Youssef Bassiem</b>
+					Lorem ipsum dolor sit amet
+					<span class="hash">#life_style</span>
+				  </p>
+				  <p class="text-muted">View all 200 comments</p>
+				</div>
+			  </div>
+            <div class="feed">
+				<div class="head">
+				  <div class="profile">
+					<a href=""
+					  ><img src="images/profile-1.jpg" class="profile-pic"
+					/></a>
+					<div class="handle">
+					  <a href=""><h4>Youssef Bassiem</h4></a>
+					  <a href="" class="text-muted"><p>@Youssef</p></a>
+					</div>
+				  </div>
+				  <i class="uli uil-ellipsis-h"></i>
+				</div>
+				<div class="pic-feed">
+				  <img src="images/feed-1.jpg" />
+				  <div class="buttons">
+					<div class="action-buttons">
+					  <i class="uli uil-heart"></i>
+					  <i class="uli uil-comment-dots"></i>
+					  <i class="uli uil-share-alt"></i>
+					</div>
+					<i class="uli uil-bookmark"></i>
+				  </div>
+				</div>
+				<div class="liked-by">
+				  <span>
+					<img src="images/profile-14.jpg" />
+				  </span>
+				  <span>
+					<img src="images/profile-15.jpg"/>
+				  </span>
+				  <span
+					><img src="images/profile-16.jpg" 
+				  /></span>
+				  <p>
+					<span>Liked by </span><b>Youssef Bassiem </b><span> and </span
+					><b>203 others</b>
+				  </p>
+				</div>
+				<div class="caption">
+					<p>
+					  <b>Youssef Bassiem</b>
+					Lorem ipsum dolor sit amet
+					<span class="hash">#life_style</span>
+				  </p>
+				  <p class="text-muted">View all 200 comments</p>
+				</div>
+			  </div>
+            <div class="feed">
+              <div class="head">
+                <div class="profile">
+                  <a href=""
+                    ><img src="images/profile-1.jpg" class="profile-pic"
+                  /></a>
+                  <div class="handle">
+                    <a href=""><h4>Youssef Bassiem</h4></a>
+                    <a href="" class="text-muted"><p>@Youssef</p></a>
+                  </div>
+                </div>
+                <i class="uli uil-ellipsis-h"></i>
+              </div>
+              <div class="pic-feed">
+                <img src="images/feed-1.jpg" />
+                <div class="buttons">
+                  <div class="action-buttons">
+                    <i class="uli uil-heart"></i>
+                    <i class="uli uil-comment-dots"></i>
+                    <i class="uli uil-share-alt"></i>
+                  </div>
+                  <i class="uli uil-bookmark"></i>
+                </div>
+              </div>
+              <div class="liked-by">
+                <span>
+                  <img src="images/profile-14.jpg" />
+                </span>
+                <span>
+                  <img src="images/profile-15.jpg"/>
+                </span>
+                <span
+                  ><img src="images/profile-16.jpg" 
+                /></span>
+                <p>
+                  <span>Liked by </span><b>Youssef Bassiem </b><span> and </span
+                  ><b>203 others</b>
+                </p>
+              </div>
+              <div class="caption">
+				  <p>
+					<b>Youssef Bassiem</b>
+                  Lorem ipsum dolor sit amet
+                  <span class="hash">#life_style</span>
+                </p>
+                <p class="text-muted">View all 200 comments</p>
+              </div>
+            </div>
+			<div class="feed">
+				<div class="head">
+				  <div class="profile">
+					<a href=""
+					  ><img src="images/profile-1.jpg" class="profile-pic"
+					/></a>
+					<div class="handle">
+					  <a href=""><h4>Youssef Bassiem</h4></a>
+					  <a href="" class="text-muted"><p>@Youssef</p></a>
+					</div>
+				  </div>
+				  <i class="uli uil-ellipsis-h"></i>
+				</div>
+				<div class="pic-feed">
+				  <img src="images/feed-1.jpg" />
+				  <div class="buttons">
+					<div class="action-buttons">
+					  <i class="uli uil-heart"></i>
+					  <i class="uli uil-comment-dots"></i>
+					  <i class="uli uil-share-alt"></i>
+					</div>
+					<i class="uli uil-bookmark"></i>
+				  </div>
+				</div>
+				<div class="liked-by">
+				  <span>
+					<img src="images/profile-14.jpg" />
+				  </span>
+				  <span>
+					<img src="images/profile-15.jpg"/>
+				  </span>
+				  <span
+					><img src="images/profile-16.jpg" 
+				  /></span>
+				  <p>
+					<span>Liked by </span><b>Youssef Bassiem </b><span> and </span
+					><b>203 others</b>
+				  </p>
+				</div>
+				<div class="caption">
+					<p>
+					  <b>Youssef Bassiem</b>
+					Lorem ipsum dolor sit amet
+					<span class="hash">#life_style</span>
+				  </p>
+				  <p class="text-muted">View all 200 comments</p>
+				</div>
+			  </div>
+			  <div class="feed">
+				<div class="head">
+				  <div class="profile">
+					<a href=""
+					  ><img src="images/profile-1.jpg" class="profile-pic"
+					/></a>
+					<div class="handle">
+					  <a href=""><h4>Youssef Bassiem</h4></a>
+					  <a href="" class="text-muted"><p>@Youssef</p></a>
+					</div>
+				  </div>
+				  <i class="uli uil-ellipsis-h"></i>
+				</div>
+				<div class="pic-feed">
+				  <img src="images/feed-1.jpg" />
+				  <div class="buttons">
+					<div class="action-buttons">
+					  <i class="uli uil-heart"></i>
+					  <i class="uli uil-comment-dots"></i>
+					  <i class="uli uil-share-alt"></i>
+					</div>
+					<i class="uli uil-bookmark"></i>
+				  </div>
+				</div>
+				<div class="liked-by">
+				  <span>
+					<img src="images/profile-14.jpg" />
+				  </span>
+				  <span>
+					<img src="images/profile-15.jpg"/>
+				  </span>
+				  <span
+					><img src="images/profile-16.jpg" 
+				  /></span>
+				  <p>
+					<span>Liked by </span><b>Youssef Bassiem </b><span> and </span
+					><b>203 others</b>
+				  </p>
+				</div>
+				<div class="caption">
+					<p>
+					  <b>Youssef Bassiem</b>
+					Lorem ipsum dolor sit amet
+					<span class="hash">#life_style</span>
+				  </p>
+				  <p class="text-muted">View all 200 comments</p>
+				</div>
+			  </div>
+			  <div class="feed">
+				<div class="head">
+				  <div class="profile">
+					<a href=""
+					  ><img src="images/profile-1.jpg" class="profile-pic"
+					/></a>
+					<div class="handle">
+					  <a href=""><h4>Youssef Bassiem</h4></a>
+					  <a href="" class="text-muted"><p>@Youssef</p></a>
+					</div>
+				  </div>
+				  <i class="uli uil-ellipsis-h"></i>
+				</div>
+				<div class="pic-feed">
+				  <img src="images/feed-1.jpg" />
+				  <div class="buttons">
+					<div class="action-buttons">
+					  <i class="uli uil-heart"></i>
+					  <i class="uli uil-comment-dots"></i>
+					  <i class="uli uil-share-alt"></i>
+					</div>
+					<i class="uli uil-bookmark"></i>
+				  </div>
+				</div>
+				<div class="liked-by">
+				  <span>
+					<img src="images/profile-14.jpg" />
+				  </span>
+				  <span>
+					<img src="images/profile-15.jpg"/>
+				  </span>
+				  <span
+					><img src="images/profile-16.jpg" 
+				  /></span>
+				  <p>
+					<span>Liked by </span><b>Youssef Bassiem </b><span> and </span
+					><b>203 others</b>
+				  </p>
+				</div>
+				<div class="caption">
+					<p>
+					  <b>Youssef Bassiem</b>
+					Lorem ipsum dolor sit amet
+					<span class="hash">#life_style</span>
+				  </p>
+				  <p class="text-muted">View all 200 comments</p>
+				</div>
+			  </div>
+			  <div class="feed">
+				<div class="head">
+				  <div class="profile">
+					<a href=""
+					  ><img src="images/profile-1.jpg" class="profile-pic"
+					/></a>
+					<div class="handle">
+					  <a href=""><h4>Youssef Bassiem</h4></a>
+					  <a href="" class="text-muted"><p>@Youssef</p></a>
+					</div>
+				  </div>
+				  <i class="uli uil-ellipsis-h"></i>
+				</div>
+				<div class="pic-feed">
+				  <img src="images/feed-1.jpg" />
+				  <div class="buttons">
+					<div class="action-buttons">
+					  <i class="uli uil-heart"></i>
+					  <i class="uli uil-comment-dots"></i>
+					  <i class="uli uil-share-alt"></i>
+					</div>
+					<i class="uli uil-bookmark"></i>
+				  </div>
+				</div>
+				<div class="liked-by">
+				  <span>
+					<img src="images/profile-14.jpg" />
+				  </span>
+				  <span>
+					<img src="images/profile-15.jpg"/>
+				  </span>
+				  <span
+					><img src="images/profile-16.jpg" 
+				  /></span>
+				  <p>
+					<span>Liked by </span><b>Youssef Bassiem </b><span> and </span
+					><b>203 others</b>
+				  </p>
+				</div>
+				<div class="caption">
+					<p>
+					  <b>Youssef Bassiem</b>
+					Lorem ipsum dolor sit amet
+					<span class="hash">#life_style</span>
+				  </p>
+				  <p class="text-muted">View all 200 comments</p>
+				</div>
+			  </div>
+			  
+          </div>
+          <!-- ============RIGHT============ -->
         </div>
-
-        <!-- ============RIGHT============ -->
       </div>
     </main>
   </body>
