--- a/index.html
+++ b/index.html
@@ -541,69 +541,67 @@
               <h6>General</h6>
               <h6>Requests(2)</h6>
             </div>
-              <div class="profile">
-                <a href=""
-                  ><img src="images/profile-4.jpg" class="profile-pic"
-                />
-				<div class="active"></div>
-			</a>
-                <div class="handle">
-                  <a href=""><h5>Youssef Bassiem</h5></a>
-                  <a href="" class="text-bold"><p>ok</p></a>
-                </div>
+            <div class="profile">
+              <a href=""
+                ><img src="images/profile-4.jpg" class="profile-pic" />
+                <div class="active"></div>
+              </a>
+              <div class="handle">
+                <a href=""><h5>Youssef Bassiem</h5></a>
+                <a href="" class="text-bold"><p>ok</p></a>
               </div>
-              <div class="profile">
-                <a href=""
-                  ><img src="images/profile-5.jpg" class="profile-pic"
-                /></a>
-                <div class="handle">
-                  <a href=""><h5>Youssef Bassiem</h5></a>
-                  <a href="" class="text-muted"><p>missed call</p></a>
-                </div>
+            </div>
+            <div class="profile">
+              <a href=""
+                ><img src="images/profile-5.jpg" class="profile-pic"
+              /></a>
+              <div class="handle">
+                <a href=""><h5>Youssef Bassiem</h5></a>
+                <a href="" class="text-muted"><p>missed call</p></a>
               </div>
-              <div class="profile">
-                <a href=""
-                  ><img src="images/profile-6.jpg" class="profile-pic"
-                /></a>
-                <div class="handle">
-                  <a href=""><h5>Youssef Bassiem</h5></a>
-                  <a href="" class="text-bold"><p>2 new messages</p></a>
-                </div>
+            </div>
+            <div class="profile">
+              <a href=""
+                ><img src="images/profile-6.jpg" class="profile-pic"
+              /></a>
+              <div class="handle">
+                <a href=""><h5>Youssef Bassiem</h5></a>
+                <a href="" class="text-bold"><p>2 new messages</p></a>
               </div>
-              <div class="profile">
-                <a href=""
-                  ><img src="images/profile-7.jpg" class="profile-pic"
-                />
-				<div class="active"></div>
-			</a>
-                <div class="handle">
-                  <a href=""><h5>Youssef Bassiem</h5></a>
-                  <a href="" class="text-muted"><p>Birthday Tomorrow!</p></a>
-                </div>
+            </div>
+            <div class="profile">
+              <a href=""
+                ><img src="images/profile-7.jpg" class="profile-pic" />
+                <div class="active"></div>
+              </a>
+              <div class="handle">
+                <a href=""><h5>Youssef Bassiem</h5></a>
+                <a href="" class="text-muted"><p>Birthday Tomorrow!</p></a>
               </div>
-              <div class="profile">
-                <a href=""
-                  ><img src="images/profile-8.jpg" class="profile-pic"
-                /></a>
-                <div class="handle">
-                  <a href=""><h5>Youssef Bassiem</h5></a>
-                  <a href="" class="text-muted"><p>Alright</p></a>
-                </div>
+            </div>
+            <div class="profile">
+              <a href=""
+                ><img src="images/profile-8.jpg" class="profile-pic"
+              /></a>
+              <div class="handle">
+                <a href=""><h5>Youssef Bassiem</h5></a>
+                <a href="" class="text-muted"><p>Alright</p></a>
               </div>
-              <div class="profile">
-                <a href=""
-                  ><img src="images/profile-9.jpg" class="profile-pic"
-                /></a>
-                <div class="handle">
-                  <a href=""><h5>Youssef Bassiem</h5></a>
-                  <a href="" class="text-bold"><p>Done</p></a>
-                </div>
+            </div>
+            <div class="profile">
+              <a href=""
+                ><img src="images/profile-9.jpg" class="profile-pic"
+              /></a>
+              <div class="handle">
+                <a href=""><h5>Youssef Bassiem</h5></a>
+                <a href="" class="text-bold"><p>Done</p></a>
               </div>
+            </div>
             <!-- end of profile -->
           </div>
           <div class="requests">
-			  <h4 class="text-muted req">Requests</h4>
-			  <div class="request">
+            <h4 class="text-muted req">Requests</h4>
+            <div class="request">
               <div class="profile">
                 <a href=""
                   ><img src="images/profile-10.jpg" class="profile-pic"
@@ -618,39 +616,88 @@
                 <button class="btn">Decline</button>
               </div>
             </div>
-			<div class="request">
-				<div class="profile">
-				  <a href=""
-					><img src="images/profile-11.jpg" class="profile-pic"
-				  /></a>
-				  <div class="handle">
-					<a href=""><h5>Youssef Bassiem</h5></a>
-					<a href="" class="text-muted"><p>8 mutual friends</p></a>
-				  </div>
-				</div>
-				<div class="actions">
-				  <button class="btn btn-primary">Accept</button>
-				  <button class="btn">Decline</button>
-				</div>
-			  </div>
-			  <div class="request">
-				<div class="profile">
-				  <a href=""
-					><img src="images/profile-12.jpg" class="profile-pic"
-				  /></a>
-				  <div class="handle">
-					<a href=""><h5>Youssef Bassiem</h5></a>
-					<a href="" class="text-muted"><p>8 mutual friends</p></a>
-				  </div>
-				</div>
-				<div class="actions">
-				  <button class="btn btn-primary">Accept</button>
-				  <button class="btn">Decline</button>
-				</div>
-			  </div>
+            <div class="request">
+              <div class="profile">
+                <a href=""
+                  ><img src="images/profile-11.jpg" class="profile-pic"
+                /></a>
+                <div class="handle">
+                  <a href=""><h5>Youssef Bassiem</h5></a>
+                  <a href="" class="text-muted"><p>8 mutual friends</p></a>
+                </div>
+              </div>
+              <div class="actions">
+                <button class="btn btn-primary">Accept</button>
+                <button class="btn">Decline</button>
+              </div>
+            </div>
+            <div class="request">
+              <div class="profile">
+                <a href=""
+                  ><img src="images/profile-12.jpg" class="profile-pic"
+                /></a>
+                <div class="handle">
+                  <a href=""><h5>Youssef Bassiem</h5></a>
+                  <a href="" class="text-muted"><p>8 mutual friends</p></a>
+                </div>
+              </div>
+              <div class="actions">
+                <button class="btn btn-primary">Accept</button>
+                <button class="btn">Decline</button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </main>
+    <div class="customize-theme">
+      <div class="card">
+        <!-- <div class="text"> -->
+        <h2>Customize your view</h2>
+        <p class="text-muted">Manage your font size, color and backgronud</p>
+        <!-- </div> -->
+        <div class="font-size">
+          <h4>Font size</h4>
+          <div>
+            <h6>Aa</h6>
+            <div class="choose-font">
+              <span class="font-size-1"></span>
+              <span class="font-size-2 active"></span>
+              <span class="font-size-3"></span>
+              <span class="font-size-4"></span>
+              <span class="font-size-5"></span>
+            </div>
+            <h3>Aa</h3>
+          </div>
+        </div>
+        <div class="color">
+          <h4>Color</h4>
+          <div class="choose-color">
+            <span class="color-1 active"></span>
+            <span class="color-2"></span>
+            <span class="color-3"></span>
+            <span class="color-4"></span>
+            <span class="color-5"></span>
+          </div>
+        </div>
+        <div class="background">
+          <h4>Background</h4>
+          <div class="choose-bg">
+            <div class="bg-1 active">
+              <span></span>
+              <h5 for="bg-1">Light</h5>
+            </div>
+            <div class="bg-2">
+              <span></span>
+              <h5 for="bg-2">Dark</h5>
+            </div>
+            <div class="bg-3">
+              <span></span>
+              <h5 for="bg-3">Lights Out</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
