--- a/index.html
+++ b/index.html
@@ -17,6 +17,106 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="mobile-nav">
+      <!-- ============SIDEBAR============ -->
+      <div class="sidebar">
+        <a href="" class="menu-item active">
+          <i class="uli uil-home"></i>
+        </a>
+
+        <a href="" class="menu-item">
+          <i class="uli uil-compass"></i>
+        </a>
+
+        <a href="" class="menu-item" id="notification">
+          <i class="uli uil-bell"
+            ><small class="notification-count">9+</small></i
+          >
+
+          <!-- ============POPUP============ -->
+          <div class="notifications">
+            <div class="notification-popup">
+              <img src="images/profile-2.jpg" class="profile-pic" />
+              <div class="nootificaion-text">
+                <div>
+                  <b>Keke Benjamin</b>
+                  <span>accepted your friend request</span>
+                </div>
+                <small class="text-muted">2 Days ago</small>
+              </div>
+            </div>
+
+            <div class="notification-popup">
+              <img src="images/profile-3.jpg" class="profile-pic" />
+              <div class="nootificaion-text">
+                <b>Aylvar Menash</b>
+                <span>commented on your post</span>
+                <small class="text-muted">1 Hour ago</small>
+              </div>
+            </div>
+
+            <div class="notification-popup">
+              <img src="images/profile-4.jpg" class="profile-pic" />
+              <div class="nootificaion-text">
+                <b>Mary Oppong</b><span> and </span><b>283 others</b>
+                <span>Liked your post</span>
+                <small class="text-muted">4 Minutes ago</small>
+              </div>
+            </div>
+
+            <div class="notification-popup">
+              <img src="images/profile-5.jpg" class="profile-pic" />
+              <div class="nootificaion-text">
+                <b>Doris Y.Lartey</b>
+                <span>commented on a post you're tagged in</span>
+                <small class="text-muted">2 Days ago</small>
+              </div>
+            </div>
+
+            <div class="notification-popup">
+              <img src="images/profile-6.jpg" class="profile-pic" />
+              <div class="nootificaion-text">
+                <b>Donald Trump</b>
+                <span>commented on your post</span>
+                <small class="text-muted">1 Hour ago</small>
+              </div>
+            </div>
+
+            <div class="notification-popup">
+              <img src="images/profile-7.jpg" class="profile-pic" />
+              <div class="nootificaion-text">
+                <b>Jane Doe</b>
+                <span>commented on your post</span>
+                <small class="text-muted">1 Hour ago</small>
+              </div>
+            </div>
+          </div>
+        </a>
+        <!-- ============END OF POPUP============ -->
+        <a href="" class="menu-item" id="msg-notification">
+          <i class="uli uil-envelope"
+            ><small class="notification-count">6</small></i
+          >
+        </a>
+
+        <a href="" class="menu-item">
+          <i class="uli uil-bookmark"></i>
+        </a>
+
+        <a href="" class="menu-item">
+          <i class="uli uil-chart-line"></i>
+        </a>
+
+        <a href="" class="menu-item">
+          <i class="uli uil-palette"></i>
+        </a>
+
+        <a href="" class="menu-item">
+          <i class="uli uil-setting"></i>
+        </a>
+      </div>
+      <!--============END OF SIDEBAR============ -->
+    </div>
     <nav>
       <div class="container">
         <h2 class="logo">Social Media</h2>
