--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
         <h2 class="logo">Social Media</h2>
         <div class="search-bar">
           <i class="uil uil-search"></i>
-          <input type="search" name="search" id="search" placeholder="Search" />
+          <input type="search" name="search" id="search" placeholder="Search">
+        </input>
         </div>
         <div class="profile-bar">
           <label for="create-post" class="btn btn-primary">Create</label>
