--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <div class="mobile-nav">
       <!-- ============SIDEBAR============ -->
       <div class="sidebar">
-        <a href="" class="menu-item active">
+        <a href="#" class="menu-item active">
           <i class="uli uil-home"></i>
         </a>
 
-        <a href="" class="menu-item">
+        <a href="#" class="menu-item">
           <i class="uli uil-compass"></i>
         </a>
 
-        <a href="" class="menu-item" id="notification">
+        <a href="#" class="menu-item" id="notification">
           <i class="uli uil-bell"
             ><small class="notification-count">9+</small></i
           >
@@ -93,25 +93,25 @@
           </div>
         </a>
         <!-- ============END OF POPUP============ -->
-        <a href="" class="menu-item" id="msg-notification">
+        <a href="#" class="menu-item" id="msg-notification">
           <i class="uli uil-envelope"
             ><small class="notification-count">6</small></i
           >
         </a>
 
-        <a href="" class="menu-item">
+        <a href="#" class="menu-item">
           <i class="uli uil-bookmark"></i>
         </a>
 
-        <a href="" class="menu-item">
+        <a href="#" class="menu-item">
           <i class="uli uil-chart-line"></i>
         </a>
 
-        <a href="" class="menu-item">
+        <a href="#" class="menu-item theme">
           <i class="uli uil-palette"></i>
         </a>
 
-        <a href="" class="menu-item">
+        <a href="#" class="menu-item">
           <i class="uli uil-setting"></i>
         </a>
       </div>
@@ -148,17 +148,17 @@
           </div>
           <!-- ============SIDEBAR============ -->
           <div class="sidebar">
-            <a href="" class="menu-item active">
+            <a href="#" class="menu-item active">
               <i class="uli uil-home"></i>
               <h3>Home</h3>
             </a>
 
-            <a href="" class="menu-item">
+            <a href="#" class="menu-item">
               <i class="uli uil-compass"></i>
               <h3>Explore</h3>
             </a>
 
-            <a href="" class="menu-item" id="notification">
+            <a href="#" class="menu-item" id="notification">
               <i class="uli uil-bell"
                 ><small class="notification-count">9+</small></i
               >
@@ -224,29 +224,29 @@
               </div>
             </a>
             <!-- ============END OF POPUP============ -->
-            <a href="" class="menu-item" id="msg-notification">
+            <a href="#" class="menu-item" id="msg-notification">
               <i class="uli uil-envelope"
                 ><small class="notification-count">6</small></i
               >
               <h3>Message</h3>
             </a>
 
-            <a href="" class="menu-item">
+            <a href="#" class="menu-item">
               <i class="uli uil-bookmark"></i>
               <h3>Bookmarks</h3>
             </a>
 
-            <a href="" class="menu-item">
+            <a href="#" class="menu-item">
               <i class="uli uil-chart-line"></i>
               <h3>Analytics</h3>
             </a>
 
-            <a href="" class="menu-item">
+            <a href="#" class="menu-item theme">
               <i class="uli uil-palette"></i>
               <h3>Theme</h3>
             </a>
 
-            <a href="" class="menu-item">
+            <a href="#" class="menu-item">
               <i class="uli uil-setting"></i>
               <h3>Settings</h3>
             </a>
@@ -648,7 +648,7 @@
                 <div class="active"></div>
               </a>
               <div class="handle">
-                <a href=""><h5>Youssef Bassiem</h5></a>
+                <a href=""><h5>Ahmed</h5></a>
                 <a href="" class="text-bold"><p>ok</p></a>
               </div>
             </div>
@@ -800,5 +800,6 @@
         </div>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
