--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel='dns-prefetch' href='//t.visitorqueue.com' style='display: none !important;'/> <script>function vqTrackId(){return '90b3d7cc-f522-4831-bba1-8db957afb876';} (function(d, e) { var el = d.createElement(e); el.sa = function(an, av){this.setAttribute(an, av); return this;}; el.sa('id', 'vq_tracking').sa('src', '//t.visitorqueue.com/p/tracking.min.js?id='+vqTrackId()).sa('async', 1).sa('data-id', vqTrackId()); d.getElementsByTagName(e)[0].parentNode.appendChild(el); })(document, 'script'); </script><link rel='stylesheet' type='text/css' href="https://p.visitorqueue.com/styles/90b3d7cc-f522-4831-bba1-8db957afb876.css" id='vq_flick_styles'/> <script>function vqTrackPc(){return 1;}</script> <script>(function(d, e) { var el = d.createElement(e); el.sa = function(an, av){this.setAttribute(an, av); return this;}; el.sa('id', 'vq_personalisation').sa('src', '//personalisation.visitorqueue.com/p/personalisation.min.js?id='+vqTrackId()).sa('async', 1).sa('data-id', vqTrackId()); d.getElementsByTagName(e)[0].parentNode.appendChild(el); })(document, 'script'); </script>
   </head>
   <body>
     <div class="mobile-nav">
