--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-0BZT8FVSVM"></script>
@@ -12,7 +12,7 @@
 
   gtag('config', 'G-0BZT8FVSVM');
 </script>
-    <title>Document</title>
+    <title>Social Media</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
